fix: Better wrapping for download links

--- a/src/assets/css/site.less
+++ b/src/assets/css/site.less
@@ -719,6 +719,7 @@ a:not([class]) {
   }
 
   &__download {
+    display: inline-block;
     background-color: @lightest-for-black;
     color: #000;
     margin: 5px;
